# budgetApp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
.agents/: qa_engineer.md
.codex/skills/qa_engineer/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: csv_loader.py  models.py  statistics.py
app/web/: __init__.py  routes.py
budget/: __init__.py  core.py
docs/: branch-policy.md  implementation-plan.md
templates/: index.html
tests/: test_app.py  test_core.py  test_smoke.py
