[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-web"
version = "0.1.0"
description = "CSV 기반 가계부 웹 앱"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "radon", "xenon"]
web = ["fastapi", "uvicorn", "jinja2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
